[package]
name = "find-rss"
version = "0.0.1"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "Parse rel=alternate to find RSS feeds"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/notriddle/find-rss"
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "find-rss"

[dependencies]
html5ever = "0.25"
markup5ever_rcdom = "0.1"
tendril = "0.4"
url = "2"
ureq = "0.12.1"

[dev-dependencies]
version-sync = "0.8"
env_logger = "0.6.1"

